[package]
name = "price-check"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = { version = "0.17.1", default-features = false, features = ["errors"] }
ureq = { version = "2.7.1", default-features = false, features = ["tls", "brotli"] }
url = "2.4.0"

